# Architecture and target configuration
option('arch', type: 'combo', choices: ['ARM', 'AARCH64', 'x86_64', 'RISCV', 'PPC', 'RENESAS_RX', 'sim', 'ARM_BE'], value: 'ARM', description: 'Target architecture')
option('target', type: 'string', value: 'stm32h7', description: 'Board/SoC target name (matches hal/<target>.c)')

# Signature and hash algorithms
option('sign', type: 'combo', choices: ['NONE', 'ECC256', 'ECC384', 'ECC521', 'ED25519', 'ED448', 'RSA2048', 'RSA3072', 'RSA4096', 'LMS', 'XMSS', 'ML_DSA'], value: 'ECC256', description: 'Signature algorithm')
option('hash', type: 'combo', choices: ['SHA256', 'SHA384', 'SHA3'], value: 'SHA256', description: 'Hash algorithm')

# Encryption options
option('encrypt', type: 'boolean', value: false, description: 'Enable image encryption')
option('encrypt_with_aes128', type: 'boolean', value: false, description: 'Encrypt with AES-128-CTR')
option('encrypt_with_aes256', type: 'boolean', value: false, description: 'Encrypt with AES-256-CTR')
option('encrypt_cache', type: 'integer', value: 0, description: 'Encryption cache size (0 disables)')

# Math library options
option('spmath', type: 'boolean', value: true, description: 'Use Single Precision math library')
option('spmathall', type: 'boolean', value: false, description: 'Use Single Precision math for all operations')
option('no_asm', type: 'boolean', value: false, description: 'Disable assembly optimizations')
option('no_arm_asm', type: 'boolean', value: false, description: 'Disable ARM assembly optimizations')

# Build options
option('use_gcc_headless', type: 'boolean', value: true, description: 'Use GCC headless/freestanding mode')
option('no_loader', type: 'boolean', value: false, description: 'Disable bootloader functionality')
option('wolfboot_debug', type: 'boolean', value: false, description: 'Enable debug mode')

# Flash configuration
option('flash_otp_keystore', type: 'boolean', value: false, description: 'Use OTP flash for keystore')
option('spi_flash', type: 'boolean', value: false, description: 'Enable SPI flash support')
option('qspi_flash', type: 'boolean', value: false, description: 'Enable QSPI flash support')
option('uart_flash', type: 'boolean', value: false, description: 'Enable UART flash support')
option('spi_target', type: 'string', value: 'stm32', description: 'SPI driver target name')
option('uart_target', type: 'string', value: 'stm32', description: 'UART driver target name')

# Memory layout configuration
option('arch_flash_offset', type: 'string', value: '0x08000000', description: 'Architecture flash offset')
option('wolfboot_origin', type: 'string', value: '', description: 'wolfBoot origin address')
option('wolfboot_partition_size', type: 'string', value: '0xD0000', description: 'Partition size')
option('wolfboot_partition_boot_address', type: 'string', value: '0x8020000', description: 'Boot partition address')
option('wolfboot_partition_update_address', type: 'string', value: '0x80F0000', description: 'Update partition address')
option('wolfboot_partition_swap_address', type: 'string', value: '0x81C0000', description: 'Swap partition address')
option('wolfboot_sector_size', type: 'string', value: '0x20000', description: 'Sector size')
option('image_header_size', type: 'integer', value: 256, description: 'Image header size')

# Tool options
option('build_keytools', type: 'boolean', value: true, description: 'Build key generation and signing tools')
option('build_bin_assemble', type: 'boolean', value: true, description: 'Build binary assembly tool')
option('objcopy_prog', type: 'string', value: 'objcopy', description: 'objcopy program name')

# TPM options
option('wolfboot_tpm_verify', type: 'boolean', value: false, description: 'Enable TPM signature verification')
option('measured_boot', type: 'boolean', value: false, description: 'Enable measured boot')
option('wolfboot_tpm_keystore', type: 'boolean', value: false, description: 'Enable TPM keystore')
option('wolfboot_tpm_seal', type: 'boolean', value: false, description: 'Enable TPM sealing')

# Additional configuration
option('delta_updates', type: 'boolean', value: true, description: 'Enable delta updates')
option('wolfboot_small_stack', type: 'boolean', value: true, description: 'Use small stack configuration')
