# Architecture and target configuration
option('arch', type: 'combo', choices: ['ARM', 'AARCH64', 'x86_64', 'RISCV', 'PPC', 'RENESAS_RX', 'sim', 'ARM_BE'], value: 'ARM', description: 'Target architecture')
option('target', type: 'string', value: 'stm32h7', description: 'Board/SoC target name (matches hal/<target>.c)')

# Signature and hash algorithms
option('sign', type: 'combo', choices: ['NONE', 'ECC256', 'ECC384', 'ECC521', 'ED25519', 'ED448', 'RSA2048', 'RSA3072', 'RSA4096', 'LMS', 'XMSS', 'ML_DSA'], value: 'ECC256', description: 'Signature algorithm')
option('hash', type: 'combo', choices: ['SHA256', 'SHA384', 'SHA3'], value: 'SHA256', description: 'Hash algorithm')

# Encryption options
option('encrypt', type: 'boolean', value: false, description: 'Enable image encryption')
option('encrypt_with_aes128', type: 'boolean', value: false, description: 'Encrypt with AES-128-CTR')
option('encrypt_with_aes256', type: 'boolean', value: false, description: 'Encrypt with AES-256-CTR')
option('encrypt_cache', type: 'integer', value: 0, description: 'Encryption cache size (0 disables)')

# Math library options
option('spmath', type: 'boolean', value: true, description: 'Use Single Precision math library')
option('spmathall', type: 'boolean', value: false, description: 'Use Single Precision math for all operations')
option('no_asm', type: 'boolean', value: false, description: 'Disable assembly optimizations')
option('no_arm_asm', type: 'boolean', value: false, description: 'Disable ARM assembly optimizations')

# Build options
option('use_gcc_headless', type: 'boolean', value: true, description: 'Use GCC headless/freestanding mode')
option('no_loader', type: 'boolean', value: false, description: 'Disable bootloader functionality')
option('wolfboot_debug', type: 'boolean', value: false, description: 'Enable debug mode')
option('optimization_level', type: 'combo', choices: ['2', '3'], value: '2', description: 'Optimization level (2 for compatibility, 3 for performance)')

# Flash configuration
option('flash_otp_keystore', type: 'boolean', value: false, description: 'Use OTP flash for keystore')
option('spi_flash', type: 'boolean', value: false, description: 'Enable SPI flash support')
option('qspi_flash', type: 'boolean', value: false, description: 'Enable QSPI flash support')
option('uart_flash', type: 'boolean', value: false, description: 'Enable UART flash support')
option('spi_target', type: 'string', value: 'stm32', description: 'SPI driver target name')
option('uart_target', type: 'string', value: 'stm32', description: 'UART driver target name')

# Memory layout configuration
option('arch_flash_offset', type: 'string', value: '0x08000000', description: 'Architecture flash offset')
option('wolfboot_origin', type: 'string', value: '', description: 'wolfBoot origin address')
option('wolfboot_partition_size', type: 'string', value: '0xD0000', description: 'Partition size')
option('wolfboot_partition_boot_address', type: 'string', value: '0x8020000', description: 'Boot partition address')
option('wolfboot_partition_update_address', type: 'string', value: '0x80F0000', description: 'Update partition address')
option('wolfboot_partition_swap_address', type: 'string', value: '0x81C0000', description: 'Swap partition address')
option('wolfboot_sector_size', type: 'string', value: '0x20000', description: 'Sector size')
option('image_header_size', type: 'integer', value: 1024, description: 'Image header size')

# Tool options
option('build_keytools', type: 'boolean', value: true, description: 'Build key generation and signing tools')
option('build_bin_assemble', type: 'boolean', value: true, description: 'Build binary assembly tool')
option('objcopy_prog', type: 'string', value: 'objcopy', description: 'objcopy program name')
option('public_key_path', type: 'string', value: '', description: 'Path to external public key file for keystore generation')

# TPM options
option('wolfboot_tpm_verify', type: 'boolean', value: false, description: 'Enable TPM signature verification')
option('measured_boot', type: 'boolean', value: false, description: 'Enable measured boot')
option('wolfboot_tpm_keystore', type: 'boolean', value: false, description: 'Enable TPM keystore')
option('wolfboot_tpm_seal', type: 'boolean', value: false, description: 'Enable TPM sealing')

# Additional configuration
option('delta_updates', type: 'boolean', value: true, description: 'Enable delta updates')
option('wolfboot_small_stack', type: 'boolean', value: true, description: 'Use small stack configuration')

# Critical system options
option('vtor', type: 'boolean', value: true, description: 'Enable Vector Table Offset Register')
option('no_mpu', type: 'boolean', value: false, description: 'Disable Memory Protection Unit')
option('ram_code', type: 'boolean', value: false, description: 'Execute code from RAM')
option('dualbank_swap', type: 'boolean', value: false, description: 'Enable dual bank flash swapping')
option('allow_downgrade', type: 'boolean', value: false, description: 'Allow firmware version downgrades')
option('nvm_flash_writeonce', type: 'boolean', value: false, description: 'Flash memory is write-once')
option('disable_backup', type: 'boolean', value: false, description: 'Disable backup functionality')
option('flags_home', type: 'boolean', value: false, description: 'Use custom flags location')
option('flags_invert', type: 'boolean', value: false, description: 'Invert flag logic')
option('wolfboot_version', type: 'integer', value: 0, description: 'Custom wolfBoot version number')

# ARM TrustZone support
option('tzen', type: 'boolean', value: false, description: 'Enable ARM TrustZone support')
option('wolfcrypt_tz', type: 'boolean', value: false, description: 'Enable TrustZone wolfCrypt')
option('wolfcrypt_tz_pkcs11', type: 'boolean', value: false, description: 'Enable TrustZone PKCS11')

# Hardware acceleration and platform features
option('pka', type: 'boolean', value: false, description: 'Enable Public Key Acceleration')
option('psoc6_crypto', type: 'boolean', value: false, description: 'Enable PSoC6 crypto acceleration')
option('armored', type: 'boolean', value: false, description: 'Enable armored mode')
option('wolfboot_huge_stack', type: 'boolean', value: false, description: 'Use huge stack configuration')
option('no_xip', type: 'boolean', value: false, description: 'Disable execute-in-place')

# Advanced features
option('elf', type: 'boolean', value: false, description: 'Enable ELF loader support')
option('multiboot2', type: 'boolean', value: false, description: 'Enable Multiboot2 support')
option('linux_payload', type: 'boolean', value: false, description: 'Enable Linux payload support')
option('64bit', type: 'boolean', value: false, description: 'Enable 64-bit support')
option('wolfboot_universal_keystore', type: 'boolean', value: false, description: 'Enable universal keystore')
option('disk_lock', type: 'boolean', value: false, description: 'Enable ATA disk lock')
option('disk_lock_password', type: 'string', value: '', description: 'ATA disk lock password')

# System configuration
option('force_32bit', type: 'boolean', value: false, description: 'Force 32-bit mode')
option('big_endian', type: 'boolean', value: false, description: 'Enable big endian support')
option('flash_multi_sector_erase', type: 'boolean', value: false, description: 'Enable multi-sector erase')

# wolfHSM support
option('wolfhsm_client', type: 'boolean', value: false, description: 'Enable wolfHSM client support')
option('wolfhsm_client_local_keys', type: 'boolean', value: false, description: 'Enable wolfHSM local keys')

# Additional signature options
option('sign_secondary', type: 'combo', choices: ['', 'ECC256', 'ECC384', 'ECC521', 'ED25519', 'ED448', 'RSA2048', 'RSA3072', 'RSA4096', 'LMS', 'XMSS', 'ML_DSA'], value: '', description: 'Secondary signature algorithm for hybrid signing')

# LMS/XMSS/ML-DSA parameters
option('lms_levels', type: 'integer', value: 2, description: 'LMS signature levels')
option('lms_height', type: 'integer', value: 5, description: 'LMS signature height')
option('lms_winternitz', type: 'integer', value: 8, description: 'LMS Winternitz parameter')
option('xmss_params', type: 'string', value: 'XMSS-SHA2_10_256', description: 'XMSS parameters')
option('ml_dsa_level', type: 'integer', value: 2, description: 'ML-DSA security level')
